sync translations: modcluster additions

--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_de.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_de.properties
@@ -3,7 +3,7 @@ common_error_contentStillAssignedToGroup=Content wird immer noch einer oder mehr
 common_error_deploymentFailed=Deployment fehlgeschlagen
 common_error_detailsMissing=Keine Details
 common_error_failedToDecode=Dekodierung der Antwort fehlgeschlagen
-common_error_failure=Fehlschlagen von: 
+common_error_failure=Fehlschlagen von:
 common_error_unexpectedHttpResponse=Unerwartete HTTP-Antwort
 common_error_unknownError=Unbekannter Fehler
 common_label_action=Aktion
@@ -20,7 +20,7 @@ common_label_areYouSure=Sind Sie sicher?
 common_label_attributes=Attribute
 common_label_autoStart=Auto Start?
 common_label_back=&larr; Zur\u00fcck
-common_label_basedOn=Basierend auf 
+common_label_basedOn=Basierend auf
 common_label_cancel=Abbrechen
 common_label_changeActivation=Aktivierung \u00e4ndern
 common_label_chooseFile=Bitte w\u00e4hlen Sie eine Datei, die Sie deployen m\u00f6chten.
@@ -54,7 +54,7 @@ common_label_plaseWait=Bitte warten
 common_label_refresh=Aktualisieren
 common_label_reload=Neu laden
 common_label_remove=Entfernen
-common_label_requestProcessed=Ihre Anfrage wird bearbeitet 
+common_label_requestProcessed=Ihre Anfrage wird bearbeitet
 common_label_reset=Zur\u00fccksetzen
 common_label_save=Speichern
 common_label_selectedGroups=Gew\u00e4hlte Gruppen
@@ -62,23 +62,23 @@ common_label_selection=Auswahl
 common_label_setDefault=Standard einstellen
 common_label_settings=Einstellungen
 common_label_start=Start
-common_label_step=Schritt 
+common_label_step=Schritt
 common_label_stop=Stop
-common_label_success=Erfolg: 
-common_label_type=Typ 
+common_label_success=Erfolg:
+common_label_type=Typ
 common_label_upload=Hochladen
 common_label_value=Wert
 common_label_verifyDeploymentNames=Deployment-Namen verifizieren
 common_label_view=Ansehen &rarr;
-common_serverConfig_desc=Eine Serverkonfiguration legt die allgemeine Konfiguration eines Servers fest. Eine Serverkonfiguration kann gestartet werden und Arbeiten ausf\u00fchren. Serverkonfigurationen geh\u00f6ren zu Servergruppen. 
-common_serverGroups_desc=Eine Servergruppe legt eine gemeinsame Management-Richtlinie f\u00fcr einen Satz von Servern fest. Servergruppen werden mit Profilen assoziiert. 
+common_serverConfig_desc=Eine Serverkonfiguration legt die allgemeine Konfiguration eines Servers fest. Eine Serverkonfiguration kann gestartet werden und Arbeiten ausf\u00fchren. Serverkonfigurationen geh\u00f6ren zu Servergruppen.
+common_serverGroups_desc=Eine Servergruppe legt eine gemeinsame Management-Richtlinie f\u00fcr einen Satz von Servern fest. Servergruppen werden mit Profilen assoziiert.
 common_socket_bindings_desc=Eine Liste von Socket-Konfigurationen. Diese Konfigurationen werden in der allgemeinen Server/Domain-Konfiguration durchweg referenziert.
 host_interfaces_desc=Spezifische Regeln zur Bindung von Interfaces an einen Host. Eine Serverkonfiguration referenziert ein Interface nach Namen.
-host_properties_desc=Properties werden von einem beliebigien Server an einem Host vererbt. Jeder Server kann einen spezifischen Property-Wert au\u00dfer Kraft setzen. 
+host_properties_desc=Properties werden von einem beliebigien Server an einem Host vererbt. Jeder Server kann einen spezifischen Property-Wert au\u00dfer Kraft setzen.
 hosts_jvm_desc=Diese JVM-Konfigurationen gelten f\u00fcr jeden Server eines Hosts. JVM-Konfigurationen k\u00f6nnen der Server-Konfiguration nach Namen zugewiesen werden.
 hosts_jvm_err_deleteDefault=Die satndardm\u00e4\u00dfige JVM-Konfiguration kann nicht entfernt werden!
 interfaces_desc=Ein benanntes Netzwerk-Interface sowie die erforderlichen Kriterien zur Bestimmung der IP-Adresse, die mit diesem Interface assoziiert wird.
-interfaces_err_inetAddress_set=Mit eingestellter Inet-Adresse sind keine anderen Werte m\u00f6glich. 
+interfaces_err_inetAddress_set=Mit eingestellter Inet-Adresse sind keine anderen Werte m\u00f6glich.
 interfaces_err_loopback_address_set=Mit eingestellter Loopback-Adresse sind keine anderen Werte erlaubt!
 interfaces_err_loopback_nor_address_set=Weder Loopback noch Loopback-Adresse eingestellt!
 interfaces_err_loopback_set=Mit eingestelltem Loopback sind keine anderen Werte erlaubt!
@@ -89,18 +89,18 @@ interfaces_err_wildcard_nor_address_set=Weder Inet-Adresse noch Platzhalter eing
 interfaces_err_wildcard_set=Mit eingestelltem Adressenplatzhalter sind keine anderen Werte m\u00f6glich. With Address Wildcard is set, no other values are possible.
 logout_confirm=Wirklich abmelden?
 properties_global_desc=Diese Properties sind in der Konfiguration durchweg verf\u00fcgbar. Das Boot-Time-Flag bestimmt, ob eine Property in den JVM-Start (-Dproperty=value) weitergegeben wird
-server_config_desc=Serverkonfigurationsstatus. In einigen F\u00e4llen muss die Konfiguration neu geladen werden, um wirksam zu werden. 
+server_config_desc=Serverkonfigurationsstatus. In einigen F\u00e4llen muss die Konfiguration neu geladen werden, um wirksam zu werden.
 server_config_uptodate=Die Serverkonfiguration scheint auf dem neuesten Stand zu sein!
 server_instance_pleaseSelect=Bitte eine Serverinstanz w\u00e4hlen:
 server_instance_reloadRequired=Ein erneutes Laden des Servers ist erforderlich!
 server_instance_servers_needRestart=Der folgende Server muss neu gestartet/neu geladen werden:
 server_instances_desc=Server-Instanzen repr\u00e4sentieren den Server-Runtime-Status. Dies beinhaltet den Status der virtuellen Maschine sowie Deployments und den spezifischen Status des Untersystems (d.h Datenquellen-Poolgr\u00f6\u00dfen).
-server_reload_desc=Die Serverkonfiguration muss neu geladen oder der Server neu gestartet werden! 
+server_reload_desc=Die Serverkonfiguration muss neu geladen oder der Server neu gestartet werden!
 subsys_ee_desc=Die Konfiguration des EE-Untersystems. Sie liefert die M\u00f6glichkeit, eine Liste von Modulen festzulegen, die allen Deployments verf\u00fcgbar gemacht werden sollen.
 subsys_ejb3_beanpools_desc=Bean-Pool-Konfigurationen f\u00fcr den EJB-Container.
 subsys_ejb3_container_desc=Die allgemeine Konfiguration des ejb3-Untersystems. Diese Einstellungen gelten f\u00fcr alle Beans, wenn sie nicht beim Deployment oder auf Bean-Ebene au\u00dfer Kraft gesetzt werden.
 subsys_ejb3_services_desc=Zentral konfigurierbare Dienste, die Teil des EJB3-Untersystems sind.
-subsys_ejb3_threadpools_desc=Von EJB-Diensten referenzierte Thread-Pool-Konfigurationen. 
+subsys_ejb3_threadpools_desc=Von EJB-Diensten referenzierte Thread-Pool-Konfigurationen.
 subsys_jacorb_desc=Die JacORB-Untersystem Konfiguration.
 subsys_jca_adminobject_desc=Die Administrationsobjekte f\u00fcr einen Ressourcen-Adapter.
 subsys_jca_boostrap_config_desc=Bootstrap-Kontext f\u00fcr Ressourcen-Adapter. Jeder Kontext referenziert einen Workmanager.
@@ -109,8 +109,8 @@ subsys_jca_dataSource_metric_desc=Datenquellen Runtime-Nutzung.
 subsys_jca_dataSource_registered=Registrierte Datenquellen
 subsys_jca_dataSource_select_driver=Bitte einen JDBC-Treiber w\u00e4hlen:
 subsys_jca_dataSource_verify=Verbindungstest
-subsys_jca_dataSource_xaprop_help=Der XADataSource-Implementierungsklasse zuzuordnende Properties. 
-subsys_jca_dataSources_desc=JDBC-Datenquellen-Konfigurationen. 
+subsys_jca_dataSource_xaprop_help=Der XADataSource-Implementierungsklasse zuzuordnende Properties.
+subsys_jca_dataSources_desc=JDBC-Datenquellen-Konfigurationen.
 subsys_jca_datasource_error_loadDriver=Laden des JDBC-Treibers fehlgeschlagen:
 subsys_jca_datasource_error_loadDriver_desc=Sie haben entweder keinen JDBC-Treiber deployt oder der Server l\u00e4uft nicht. Um eine Datenquelle zu erstellen, m\u00fcssen Sie JDBC-Treiber Deployment bereitstellen.
 subsys_jca_error_context_removal=Der Standard-Kontext kann nicht gel\u00f6scht werden!
@@ -118,34 +118,34 @@ subsys_jca_error_context_removal_desc=Der Standard-Kontext ist obligatorisch!
 subsys_jca_error_datasource_notenabled=Datenquelle nicht aktiviert!
 subsys_jca_error_default_workmanager_deletion=Der Standard-Arbeitsmanager kann nicht gel\u00f6scht werden!
 subsys_jca_error_pool_exist=Thread-Pools existieren bereits!
-subsys_jca_error_pool_exist_desc=Es existieren bereits sowohl kurz laufende als auch lange laufende Thread-Pool-Konfigurationen. 
-subsys_jca_error_pool_removal=Der Pool kann nicht entfernt werden! 
+subsys_jca_error_pool_exist_desc=Es existieren bereits sowohl kurz laufende als auch lange laufende Thread-Pool-Konfigurationen.
+subsys_jca_error_pool_removal=Der Pool kann nicht entfernt werden!
 subsys_jca_error_pool_removal_desc=Ein kurzer laufender Pool ist obligatorisch.
-subsys_jca_existingDataSources=Bestehende Datenquellen-Konfigurationen 
+subsys_jca_existingDataSources=Bestehende Datenquellen-Konfigurationen
 subsys_jca_newDataSource=Hinzuf\u00fcgen
 subsys_jca_ra_connection_desc=Konfiguration der gemanagten Connection-Factories f\u00fcr einen Ressourcen-Adapter.
 subsys_jca_ra_registered=Registrierter Ressourcen-Adapter
-subsys_jca_resource_adapter_desc=Ressourcen-Adapter-Konfigurationen. 
+subsys_jca_resource_adapter_desc=Ressourcen-Adapter-Konfigurationen.
 subsys_jca_threadpool_config_desc=Von einem JCA-Workmanager verwendete Thread-Pool-Konfigurationen.
-subsys_jca_workmanager_config_desc=Workmanager f\u00fcr Ressourcen-Adapter. 
+subsys_jca_workmanager_config_desc=Workmanager f\u00fcr Ressourcen-Adapter.
 subsys_jca_xadataSources_desc=JDBC XA Datenquellen-Konfiguration.datasource configuration.
 subsys_jgroups_err_protocols_required=Der Protocol Stack kann nicht leer sein!
 subsys_jmx_desc=Die Konfiguration des JMX-Untersystems.
 subsys_jpa_basicMetric_desc=Runtime-Informationen zur Verwendung von Hibernate im Deployment.
 subsys_jpa_deployment_desc=Metrik-aktiviert: Ob Statistiken f\u00fcr eine Persistenzeinheit gesammelt werden sollen oder nicht.
 subsys_jpa_desc=Die Konfiguration des JPA-Untersystems.
-subsys_jpa_puList_desc=Verf\u00fcgbare Persistenzeinheiten. Sie m\u00fcssen m\u00f6glicherweise Statistik pro Deployment aktivieren, um die Metrik einzusehen. 
+subsys_jpa_puList_desc=Verf\u00fcgbare Persistenzeinheiten. Sie m\u00fcssen m\u00f6glicherweise Statistik pro Deployment aktivieren, um die Metrik einzusehen.
 subsys_logging_addHandler=Handler hinzuf\u00fcgen
 subsys_logging_asyncHandlers_desc=Definiert einen Handler, der in einem asynchronen Thread in die Unter-Handler  schreibt. Wird f\u00fcr Handler verwendet, die eine ma\u00dfgebliche Menge an Verz\u00f6gerung mit sich bringen.
-subsys_logging_consoleHandlers_desc=Definiert einen Handler, der in die Konsole schreibt. 
+subsys_logging_consoleHandlers_desc=Definiert einen Handler, der in die Konsole schreibt.
 subsys_logging_customHandlers_desc=Definiert einen benutzerdefinierten Protokollierungs-Handler. Der benutzerdefinierte Handler muss den java.util.logging.Handler erweitern.
-subsys_logging_fileHandlers_desc=Definiert einen Handler, der in eine Datei schreibt. 
+subsys_logging_fileHandlers_desc=Definiert einen Handler, der in eine Datei schreibt.
 subsys_logging_invalidByteSpec=Muss eine Zahl sein, der ein Zeichen f\u00fcr (b)yte,(k)ilobyte,(m)egabyte,(g)igabyte oder (t)erabyte folgt
 subsys_logging_loggers_desc=Definiert eine Logger-Kategorie.
 subsys_logging_newHandlerProperty=Neue Handler-Property
 subsys_logging_periodicRotatingFileHandlers_desc=Definiert einen Handler, der in eine Datei schreibt, wobei das Protokoll nach einer vom Suffix-String abgeleiteten Zeitdauer rotiert wird, einem Format, das vom  java.text.SimpleDateFormat verstanden werden sollte.
 subsys_logging_removeHandler=Handler entfernen
-subsys_logging_rootLogger_desc=Definiert deb root-Logger f\u00fcr diesen Protokollkontext. 
+subsys_logging_rootLogger_desc=Definiert deb root-Logger f\u00fcr diesen Protokollkontext.
 subsys_logging_sizeRotatingFileHandlers_desc=Definiert einen Handler, der in eine Datei schreibt, wobei das Protokoll rotiert wird, nachdem die Gr\u00f6\u00dfe der Datei einen bestimmten Punkt \u00fcberschreitet, wobei eine bestimmte Anzahl von Backups erhalten bleibtDefines a handler which writes to a file, rotating the log after a the size of the file grows beyond a certain point and keeping a fixed number of backups.
 subsys_mail_server_desc=Mail Server Konfigurationen.
 subsys_mail_session_desc=Mail Session Konfigurationen.
@@ -153,14 +153,15 @@ subsys_messaging_jms_desc=Die allgemeine JMS-Konfiguration.
 subsys_messaging_jms_provider_desc=JMS Provider-Konfigurationen.
 subsys_messaging_queue_metric_desc=Metrik f\u00fcr JMS-Warteschlangen.
 subsys_messaging_topic_metric_desc=Metrik f\u00fcr JMS-Topics.
+subsys_modcluster_desc=The modcluster configuration.
 subsys_osgi_capabilityAdd=Capability hinzuf\u00fcgen
 subsys_osgi_capabilityEdit=Capability bearbeiten
 subsys_osgi_frameworkPropertyAdd=Neue OSGi Framework-Property
-subsys_security_audit_desc=Auditing-Konfiguration. Konfiguriert eine Liste von zu verwendenden Provider-Modulen. 
+subsys_security_audit_desc=Auditing-Konfiguration. Konfiguriert eine Liste von zu verwendenden Provider-Modulen.
 subsys_security_authentication_desc=Authentifikationskonfigurationen f\u00fcr diese Domain. Kann entweder "classic" oder "jaspi" sein.
-subsys_security_authorization_desc=Authorisierungskonfiguration. Konfiguriert eine Liste von zu verwendenden Authorisierungsrichtlinienmodulen. 
-subsys_security_desc=Die allgemeine Konfiguration des Sicherheits-Untersystems. 
-subsys_security_domains_desc=Registrierte Sicherheits-Domains. Bitte w\u00e4hlen Sie eine Domain zur Bearbeitung der Sicherheitsrichtlinien. 
+subsys_security_authorization_desc=Authorisierungskonfiguration. Konfiguriert eine Liste von zu verwendenden Authorisierungsrichtlinienmodulen.
+subsys_security_desc=Die allgemeine Konfiguration des Sicherheits-Untersystems.
+subsys_security_domains_desc=Registrierte Sicherheits-Domains. Bitte w\u00e4hlen Sie eine Domain zur Bearbeitung der Sicherheitsrichtlinien.
 subsys_security_mapping_desc=Mapping-Konfiguration. Konfiguriert eine Liste von Mapping-Modulen, die f\u00fcr "principal", "role", "attribute" und "credential" Mapping zu verwenden sind.
 subsys_threads_blocking_bounded_desc=Ein Satz blockierender, gebundener Warteschlangen-Thread-Pools.
 subsys_threads_blocking_queueless_desc=Ein Satz blockierender, warteschlangenloser Thread-Pools.
@@ -170,9 +171,9 @@ subsys_threads_queueless_desc=Ein Satz warteschlangenloser Thread-Pools.
 subsys_threads_scheduled_desc=Ein Satz terminierter Thread-Pools.
 subsys_threads_unbounded_desc=Ein Satz ungebundener Warteschlangen-Thread-Pools.
 subsys_web_desc=Die Konfiguration des jboss.web-Untersystems.
-subsys_web_socketInUse=Socket-Binding wird bereits von einem anderen Connector verwendet 
+subsys_web_socketInUse=Socket-Binding wird bereits von einem anderen Connector verwendet
 subsys_ws_desc=Die Konfiguration des Webdienste-Untersystems.
 subsys_ws_endpoint_desc=Webdienst-Endpunkte. Endpunkte m\u00fcssen als regul\u00e4re Applikationen deployt werden.
 subys_tx_desc=Die Konfiguration des Transaktions-Untersystems.
 subys_tx_metric_desc=Diese Metrik reflektiert den aktuellen Status des Transaktions-Untersystems. Wird keine Metrik angezeigt, so k\u00f6nnen Sie m\u00f6glicherweise Statistiken f\u00fcr das Transaktions-Untersystem aktivieren.
-subys_web_metric_desc=Metrik f\u00fcr das Web-Untersystem.
+subys_web_metric_desc=Metrik f\u00fcr das Web-UntersystemMetrics for the web subsystem.
