--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_fr.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_fr.properties
@@ -71,7 +71,7 @@ common_label_value=Valeur
 common_label_verifyDeploymentNames=V\u00e9rifier les noms de d\u00e9ploiement
 common_label_view=Vue &rarr;
 common_serverConfig_desc=Une configuration de serveur indique la configuration g\u00e9n\u00e9rale d&#39;un serveur. Une configuration de serveur peut \u00eatre d\u00e9marr\u00e9e et est op\u00e9rationnelle. Les configurations de serveur appartiennent aux groupes de serveurs.
-common_serverGroups_desc=Un groupe de serveur 
+common_serverGroups_desc=Un groupe de serveur
 common_socket_bindings_desc=Une liste des configurations de socket. Ces configurations sont r\u00e9f\u00e9renc\u00e9es tout au long de la configuration globale du serveur/domaine.
 host_interfaces_desc=R\u00e8gles particuli\u00e8res pour lier les interfaces sur un h\u00f4te. Une configuration de serveur r\u00e9f\u00e9rencera une interface par nom.
 host_properties_desc=Les propri\u00e9t\u00e9s h\u00e9rit\u00e9es par un serveur sur un h\u00f4te. Chaque serveur peut changer une propri\u00e9t\u00e9 particuli\u00e8re.
@@ -138,7 +138,7 @@ subsys_jpa_puList_desc=Unit\u00e9s de persistance disponibles. Vous devrez sans 
 subsys_logging_addHandler=Ajouter Gestionnaire
 subsys_logging_asyncHandlers_desc=D\u00e9finit un gestionnaire qui \u00e9crit dans les sous-gestionnaires dans un thread asynchrone. Utilis\u00e9 pour les gestionnaires avec des temps de retard.
 subsys_logging_consoleHandlers_desc=D\u00e9finit un gestionnaire qui \u00e9crit sur la console.
-subsys_logging_customHandlers_desc=D\u00e9finit un gestionnaire de journalisation personnalis\u00e9. Le gestionnaire personnalis\u00e9 doit \u00e9tendre java.util.logging.Handler. 
+subsys_logging_customHandlers_desc=D\u00e9finit un gestionnaire de journalisation personnalis\u00e9. Le gestionnaire personnalis\u00e9 doit \u00e9tendre java.util.logging.Handler.
 subsys_logging_fileHandlers_desc=D\u00e9finit un gestionnaire qui \u00e9crit dans un fichier.
 subsys_logging_invalidByteSpec=Doit correspondre \u00e0 un num\u00e9ro suivi par char pour (b)yte,(k)ilobyte,(m)egabyte,(g)igabyte, ou (t)erabyte
 subsys_logging_loggers_desc=D\u00e9finit une cat\u00e9gorie de cr\u00e9ateur de journal.
@@ -153,11 +153,12 @@ subsys_messaging_jms_desc=La configuration g\u00e9n\u00e9rale JMS.
 subsys_messaging_jms_provider_desc=Configurations du fournisseur JMS.
 subsys_messaging_queue_metric_desc=Param\u00e8tres m\u00e9triques de files d&#39;attente JMS.
 subsys_messaging_topic_metric_desc=Param\u00e8tres m\u00e9triques de sujets JMS.
+subsys_modcluster_desc=The modcluster configuration.
 subsys_osgi_capabilityAdd=Ajouter Capacit\u00e9
 subsys_osgi_capabilityEdit=Modifier Capacit\u00e9
 subsys_osgi_frameworkPropertyAdd=Nouvelle propri\u00e9t\u00e9 Framework OSGi
 subsys_security_audit_desc=Configuration d&#39;auditing. Configure une liste de modules de fournisseur \u00e0 utiliser.
-subsys_security_authentication_desc= Configuration de l&#39;authentification pour ce domaine. Peut \u00eatre soit classique, soit jaspi.
+subsys_security_authentication_desc=Configuration de l&#39;authentification pour ce domaine. Peut \u00eatre soit classique, soit jaspi.
 subsys_security_authorization_desc=Configuration de l&#39;autorisation. Configure une liste de modules de politique d&#39;autorisation \u00e0 utiliser.
 subsys_security_desc=Configuration g\u00e9n\u00e9rale du sous-syst\u00e8me de s\u00e9curit\u00e9.
 subsys_security_domains_desc=Domaines de s\u00e9curit\u00e9 enregistr\u00e9s. Veuillez s\u00e9lectionner un domaine pour \u00e9diter les politiques de s\u00e9curit\u00e9.
@@ -175,4 +176,4 @@ subsys_ws_desc=La configuration du sous-syst\u00e8me de services web.
 subsys_ws_endpoint_desc=Web Service Endpoints. Les points de terminaison doivent \u00eatre d\u00e9ploy\u00e9s en tant qu&#39;applications r\u00e9guli\u00e8res.
 subys_tx_desc=La configuration du sous-syst\u00e8me de transactions.
 subys_tx_metric_desc=Ces param\u00e8tres m\u00e9triques refl\u00e8tent l&#39;\u00e9tat actuel du sous-syst\u00e8me de la transaction. Si aucun param\u00e8tre m\u00e9trique appara\u00eet, vous serez sans doute oblig\u00e9 d&#39;activer les statistiques du sous-syst\u00e8me de la transaction.
-subys_web_metric_desc=M\u00e9triques du sous-syst\u00e8me web.
+subys_web_metric_desc=M\u00e9triques du sous-syst\u00e8me web subsystem.
