--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_pt_BR.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_pt_BR.properties
@@ -94,7 +94,7 @@ server_config_uptodate=A configura\u00e7\u00e3o do servidor parece ter sido atua
 server_instance_pleaseSelect=Por favor, selecione a inst\u00e2ncia do servidor:
 server_instance_reloadRequired=A recarga do servidor \u00e9 solicitada!
 server_instance_servers_needRestart=O seguinte servidor precisa ser reiniciado/recarregado:
-server_instances_desc=As inst\u00e2ncias do servidor representam o estado do per\u00edodo de execu\u00e7\u00e3o do servidor. Isto inclui o status da m\u00e1quina virtual, assim como o estado espec\u00edfico dos sub-sistemas e implanta\u00e7\u00f5es (ex.: tamanhos do pool da fonte de dados). 
+server_instances_desc=As inst\u00e2ncias do servidor representam o estado do per\u00edodo de execu\u00e7\u00e3o do servidor. Isto inclui o status da m\u00e1quina virtual, assim como o estado espec\u00edfico dos sub-sistemas e implanta\u00e7\u00f5es (ex.: tamanhos do pool da fonte de dados).
 server_reload_desc=A configura\u00e7\u00e3o do servidor precisa ser recarregada oi o servidor reinicializado!
 subsys_ee_desc=A configura\u00e7\u00e3o do sub-sistema EE. Ela fornece a habilidade para especificar a lista de m\u00f3dulos que deve ser estar dispon\u00edvel para todas as implanta\u00e7\u00f5es.
 subsys_ejb3_beanpools_desc=Configura\u00e7\u00f5es do pool de bean para o recipiente EJB.
@@ -143,7 +143,7 @@ subsys_logging_fileHandlers_desc=Define o manuseador que grava num arquivo.
 subsys_logging_invalidByteSpec=Deve ser seguida por um char para (b)yte,(k)ilobyte,(m)egabyte,(g)igabyte ou (t)erabyte
 subsys_logging_loggers_desc=Define uma categoria do agente de log.
 subsys_logging_newHandlerProperty=Nova Propriedade do Manuseador
-subsys_logging_periodicRotatingFileHandlers_desc=Define um manuseador que escreve a um arquivo, roteando o log ap\u00f3s o per\u00edodo de tempo derivado a partir de uma sequ\u00eancia de sufixo gerada, que deve estar num formato entendido pelo java.text.SimpleDateFormat. 
+subsys_logging_periodicRotatingFileHandlers_desc=Define um manuseador que escreve a um arquivo, roteando o log ap\u00f3s o per\u00edodo de tempo derivado a partir de uma sequ\u00eancia de sufixo gerada, que deve estar num formato entendido pelo java.text.SimpleDateFormat.
 subsys_logging_removeHandler=Remover Manuseador
 subsys_logging_rootLogger_desc=Define a raiz do agente de log para este contexto de log.
 subsys_logging_sizeRotatingFileHandlers_desc=Define um manuseador que grava a um arquivo, roteando o log ap\u00f3s o tamanho do arquivo crescer al\u00e9m de um certo ponto e mantendo um n\u00famero de backups.
@@ -153,6 +153,7 @@ subsys_messaging_jms_desc=Vis\u00e3o Geral da Configura\u00e7\u00e3o JMS.
 subsys_messaging_jms_provider_desc=Configura\u00e7\u00f5es do provedor JMS.
 subsys_messaging_queue_metric_desc=M\u00e9tricas das filas JMS.
 subsys_messaging_topic_metric_desc=M\u00e9tricas para os t\u00f3picos JMS.
+subsys_modcluster_desc=The modcluster configuration.
 subsys_osgi_capabilityAdd=Adicionar Capacidade
 subsys_osgi_capabilityEdit=Editar Capacidade
 subsys_osgi_frameworkPropertyAdd=Nova Propriedade do Framework OSGi
@@ -163,7 +164,7 @@ subsys_security_desc=A configura\u00e7\u00e3o geral do sub-sistema de seguran\u0
 subsys_security_domains_desc=Dom\u00ednios de Seguran\u00e7a registrados. Por favor selecione um dom\u00ednio para editar as pol\u00edticas de seguran\u00e7a.
 subsys_security_mapping_desc=Configura\u00e7\u00e3o de mapeamento. Configura os m\u00f3dulos de mapeamento a ser usados para o mapeamento principal, de fun\u00e7\u00e3o, atributo e credencial.
 subsys_threads_blocking_bounded_desc=Um conjunto de bloqueamento de pools de segmenta\u00e7\u00e3o de fila vinculada.
-subsys_threads_blocking_queueless_desc=Um conjunto de bloqueamento de pools de segmenta\u00e7\u00e3o sem fila fila. 
+subsys_threads_blocking_queueless_desc=Um conjunto de bloqueamento de pools de segmenta\u00e7\u00e3o sem fila fila.
 subsys_threads_bounded_desc=Um conjunto vinculado de pools de segmenta\u00e7\u00e3o da fila.
 subsys_threads_factory_desc=Um conjunto de cria\u00e7\u00f5es da segmenta\u00e7\u00e3o
 subsys_threads_queueless_desc=Um conjunto de pools de segmenta\u00e7\u00e3o sem fila.
@@ -175,4 +176,4 @@ subsys_ws_desc=A configura\u00e7\u00e3o do sub-sistema dos servi\u00e7os da web.
 subsys_ws_endpoint_desc=Pontos de Extremidade do Servi\u00e7o da Web. Os Pontos de Extremidade a serem implantados como aplicativos regulares.
 subys_tx_desc=A configura\u00e7\u00e3o da sub-sistema das transa\u00e7\u00f5es.
 subys_tx_metric_desc=Essas m\u00e9tricas refletem do estado atual do sub-sistema da transa\u00e7\u00e3o. Voc\u00ea dever\u00e1 ativar as estat\u00edsticas para o sub-sistema, caso a nenhuma m\u00e9trica seja apresentada.
-subys_web_metric_desc=M\u00e9tricas para o sub-sistema da web.
+subys_web_metric_desc=M\u00e9tricas para o sub-sistema da web subsystem.
