--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_es.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_es.properties
@@ -175,4 +175,5 @@ subsys_ws_desc=La configuraci\u00f3n del subsistema de servicios web.
 subsys_ws_endpoint_desc=Puntos finales de servicios web. Es necesario implementar los puntos finales como aplicaciones normales.
 subys_tx_desc=La configuraci\u00f3n del sub-sistema de transacciones.
 subys_tx_metric_desc=Esta m\u00e9trica refleja el estado actual del sub-sistema de transacciones. Si no se puede ver ninguna m\u00e9trica entonces es posible que tenga que habilitar las estad\u00edsticas para el sub-sistema de transacciones.
-subys_web_metric_desc=M\u00e9trica para el subsistema web.
+subys_web_metric_desc=M\u00e9trica para el subsistema web subsystem.
+subsys_modcluster_desc=The modcluster configuration.
