--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_ja.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_ja.properties
@@ -52,8 +52,8 @@ common_label_interfaces=\u30A4\u30F3\u30BF\u30FC\u30D5\u30A7\u30FC\u30B9
 common_label_item=\u30A2\u30A4\u30C6\u30E0
 common_label_key=\u30AD\u30FC
 common_label_lazyActivation=\u9045\u5EF6\u30A2\u30AF\u30C6\u30A3\u30D9\u30FC\u30B7\u30E7\u30F3
-common_label_manageDeployments=\u30C7\u30D7\u30ED\u30A4\u30E1\u30F3\u30C8\u7BA1\u7406
 common_label_logout=Logout
+common_label_manageDeployments=\u30C7\u30D7\u30ED\u30A4\u30E1\u30F3\u30C8\u7BA1\u7406
 common_label_messageDetail=\u30E1\u30C3\u30BB\u30FC\u30B8\u8A73\u7D30
 common_label_messageDetailTitle=\u30E1\u30C3\u30BB\u30FC\u30B8
 common_label_messages=\u30E1\u30C3\u30BB\u30FC\u30B8
@@ -345,18 +345,19 @@ subsys_logging_size=\u30B5\u30A4\u30BA
 subsys_logging_sizeRotatingFileHandlers=Size Rotating File Handler (\u30B5\u30A4\u30BA\u306E\u30ED\u30FC\u30C6\u30FC\u30B7\u30E7\u30F3\u3092\u884C\u3046\u30D5\u30A1\u30A4\u30EB\u30CF\u30F3\u30C9\u30E9\u30FC)
 subsys_logging_sizeRotatingFileHandlers_desc=\u30D5\u30A1\u30A4\u30EB\u30B5\u30A4\u30BA\u304C\u7279\u5B9A\u306E\u6570\u5024\u3092\u8D85\u3048\u3066\u304B\u3089\u30ED\u30B0\u3092\u30ED\u30FC\u30C6\u30FC\u30B7\u30E7\u30F3\u3057\u3001\u30D0\u30C3\u30AF\u30A2\u30C3\u30D7\u3092\u4E00\u5B9A\u306E\u6570\u3060\u3051\u53D6\u308B\u3088\u3046\u306B\u3001\u30D5\u30A1\u30A4\u30EB\u306B\u66F8\u304D\u8FBC\u307F\u3092\u884C\u3046\u30CF\u30F3\u30C9\u30E9\u30FC\u3092\u5B9A\u7FA9\u3057\u307E\u3059\u3002
 subsys_logging_subhandlers=\u30B5\u30D6\u30CF\u30F3\u30C9\u30E9\u30FC
-subsys_mail_server_desc=Mail server definitions to used with Mail Session.
-subsys_mail_session_desc=Mail session definitions.
 subsys_logging_suffix=\u30B5\u30D5\u30A3\u30C3\u30AF\u30B9
 subsys_logging_target=\u5BFE\u8C61
 subsys_logging_type=\u30BF\u30A4\u30D7
 subsys_logging_useParentHandlers=\u89AA\u30CF\u30F3\u30C9\u30E9\u30FC\u306E\u4F7F\u7528
+subsys_mail_server_desc=Mail server definitions to used with Mail Session.
+subsys_mail_session_desc=Mail session definitions.
 subsys_messaging_jms_desc=JMS \u5168\u822C\u8A2D\u5B9A
 subsys_messaging_jms_destinations=JMS \u30C7\u30B9\u30C6\u30A3\u30CD\u30FC\u30B7\u30E7\u30F3
 subsys_messaging_jms_provider=JMS \u30D7\u30ED\u30D0\u30A4\u30C0\u30FC
 subsys_messaging_jms_provider_desc=JMS \u30D7\u30ED\u30D0\u30A4\u30C0\u30FC\u8A2D\u5B9A
 subsys_messaging_queue_metric_desc=JMS \u30AD\u30E5\u30FC\u306E\u30E1\u30C8\u30EA\u30AF\u30B9
 subsys_messaging_topic_metric_desc=JMS \u30C8\u30D4\u30C3\u30AF\u306E\u30E1\u30C8\u30EA\u30AF\u30B9
+subsys_modcluster_desc=The modcluster configuration.
 subsys_naming_jndiBindings=JNDI \u30D0\u30A4\u30F3\u30C7\u30A3\u30F3\u30B0
 subsys_naming_jndiView=JNDI \u30D3\u30E5\u30FC
 subsys_naming_selectedURI=\u9078\u629E\u3057\u305F URI \:
@@ -420,4 +421,4 @@ subsys_ws_endpoints=\u30A8\u30F3\u30C9\u30DD\u30A4\u30F3\u30C8
 subsys_ws_provider=\u30D7\u30ED\u30D0\u30A4\u30C0\u30FC
 subys_tx_desc=\u30C8\u30E9\u30F3\u30B6\u30AF\u30B7\u30E7\u30F3\u30B5\u30D6\u30B7\u30B9\u30C6\u30E0\u306E\u8A2D\u5B9A
 subys_tx_metric_desc=\u3053\u308C\u3089\u306E\u30E1\u30C8\u30EA\u30AF\u30B9\u306F\u3001\u30C8\u30E9\u30F3\u30B6\u30AF\u30B7\u30E7\u30F3\u30B5\u30D6\u30B7\u30B9\u30C6\u30E0\u306E\u73FE\u5728\u306E\u72B6\u614B\u3092\u53CD\u6620\u3057\u307E\u3059\u3002\u30E1\u30C8\u30EA\u30AF\u30B9\u304C\u8868\u793A\u3055\u308C\u3066\u3044\u306A\u3044\u5834\u5408\u306F\u3001\u30C8\u30E9\u30F3\u30B6\u30AF\u30B7\u30E7\u30F3\u30B5\u30D6\u30B7\u30B9\u30C6\u30E0\u306E\u7D71\u8A08\u3092\u6709\u52B9\u306B\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
-subys_web_metric_desc=Web \u30B5\u30D6\u30B7\u30B9\u30C6\u30E0\u306E\u30E1\u30C8\u30EA\u30AF\u30B9
+subys_web_metric_desc=Web \u30B5\u30D6\u30B7\u30B9\u30C6\u30E0\u306E\u30E1\u30C8\u30EA\u30AF\u30B9Metrics for the web subsystem.
