Put infinispan descriptions in UIConstants_en.properties.  Clean up System.out's

--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_en.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_en.properties
@@ -101,6 +101,11 @@ subsys_ejb3_beanpools_desc=Bean pool configurations for the EJB container.
 subsys_ejb3_container_desc=The overall configuration of the ejb3 subsystem. These setting apply to all beans, unless overridden at the deployment or bean level.
 subsys_ejb3_services_desc=Centrally configurable services that are part of the EJB3 subsystem.
 subsys_ejb3_threadpools_desc=Thread pool configurations that are referenced by EJB services.
+subsys_infinispan_cache_container_desc=A set of infinispan cache containers.
+subsys_infinispan_local_cache_desc=A set of infinispan local caches.
+subsys_infinispan_invalidation_cache_desc=A set of infinispan invalidation caches.
+subsys_infinispan_replicated_cache_desc=A set of infinispan replicated caches.
+subsys_infinispan_distributed_cache_desc=A set of infinispan distributed caches.
 subsys_jacorb_desc=The JacORB subsystem configuration.
 subsys_jca_adminobject_desc=The administration objects for a resource adapter.
 subsys_jca_boostrap_config_desc=Bootstrap context for resource adapters. Each context does reference a workmanager.
