synchronize message bundles

--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_de.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_de.properties
@@ -100,7 +100,12 @@ subsys_ee_desc=Die Konfiguration des EE-Untersystems. Sie liefert die M\u00f6gli
 subsys_ejb3_beanpools_desc=Bean-Pool-Konfigurationen f\u00fcr den EJB-Container.
 subsys_ejb3_container_desc=Die allgemeine Konfiguration des ejb3-Untersystems. Diese Einstellungen gelten f\u00fcr alle Beans, wenn sie nicht beim Deployment oder auf Bean-Ebene au\u00dfer Kraft gesetzt werden.
 subsys_ejb3_services_desc=Zentral konfigurierbare Dienste, die Teil des EJB3-Untersystems sind.
-subsys_ejb3_threadpools_desc=Von EJB-Diensten referenzierte Thread-Pool-Konfigurationen.
+subsys_ejb3_threadpools_desc=Von EJB-Diensten referenzierte Thread-Pool-Konfigurationen pool configurations that are referenced by EJB services.
+subsys_infinispan_cache_container_desc=A set of infinispan cache containers.
+subsys_infinispan_local_cache_desc=A set of infinispan local caches.
+subsys_infinispan_invalidation_cache_desc=A set of infinispan invalidation caches.
+subsys_infinispan_replicated_cache_desc=A set of infinispan replicated caches.
+subsys_infinispan_distributed_cache_desc=A set of infinispan distributed caches.
 subsys_jacorb_desc=Die JacORB-Untersystem Konfiguration.
 subsys_jca_adminobject_desc=Die Administrationsobjekte f\u00fcr einen Ressourcen-Adapter.
 subsys_jca_boostrap_config_desc=Bootstrap-Kontext f\u00fcr Ressourcen-Adapter. Jeder Kontext referenziert einen Workmanager.
