--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_es.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_es.properties
@@ -100,7 +100,12 @@ subsys_ee_desc=La configuraci\u00f3n del subsistema EE. Proporciona la habilidad
 subsys_ejb3_beanpools_desc=Configuraciones de pools de beans para el contenedor EJB.
 subsys_ejb3_container_desc=La configuraci\u00f3n general del sub-sistema ejb3. Esta configuraci\u00f3n aplica a todos los beans a menos de que se sobreescriba durante la implementaci\u00f3n o a nivel del bean.
 subsys_ejb3_services_desc=Servicios configurables centralmente que son parte del sub-sistema EJB3.
-subsys_ejb3_threadpools_desc=Configuraciones de pools de hilos que son referenciados por los servicios EJB. 
+subsys_ejb3_threadpools_desc=Configuraciones de pools de hilos que son referenciados por los servicios EJB services.
+subsys_infinispan_cache_container_desc=A set of infinispan cache containers.
+subsys_infinispan_local_cache_desc=A set of infinispan local caches.
+subsys_infinispan_invalidation_cache_desc=A set of infinispan invalidation caches.
+subsys_infinispan_replicated_cache_desc=A set of infinispan replicated caches.
+subsys_infinispan_distributed_cache_desc=A set of infinispan distributed caches.
 subsys_jacorb_desc=La configuraci\u00f3n del sub-sistema JacORB.
 subsys_jca_adminobject_desc=Los objetos de administraci\u00f3n para un adaptador de recursos.
 subsys_jca_boostrap_config_desc=Contexto bootstrap para los adaptadores de recursos. Cada contexto hace referencia a un administrador de trabajo.
