--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_fr.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_fr.properties
@@ -100,7 +100,12 @@ subsys_ee_desc=La configuration du sous-syst\u00e8me EE. Elle donne la possibili
 subsys_ejb3_beanpools_desc=Configurations de pool de bean pour le conteneur EJB.
 subsys_ejb3_container_desc=La configuration g\u00e9n\u00e9rale du sous-syst\u00e8me ejb3. Cette configuration s&#39;applique \u00e0 tous les beans, \u00e0 moins que qu&#39;ils aient \u00e9t\u00e9 remplac\u00e9s au niveau d\u00e9ploiement ou au niveau bean.
 subsys_ejb3_services_desc=Services configurables de fa\u00e7on centralis\u00e9e et qui font partie du sous-syst\u00e8me EJB3.
-subsys_ejb3_threadpools_desc=Configurations de pool de thread qui sont r\u00e9f\u00e9renc\u00e9es par les services EJB.
+subsys_ejb3_threadpools_desc=Configurations de pool de thread qui sont r\u00e9f\u00e9renc\u00e9es par les services EJB services.
+subsys_infinispan_cache_container_desc=A set of infinispan cache containers.
+subsys_infinispan_local_cache_desc=A set of infinispan local caches.
+subsys_infinispan_invalidation_cache_desc=A set of infinispan invalidation caches.
+subsys_infinispan_replicated_cache_desc=A set of infinispan replicated caches.
+subsys_infinispan_distributed_cache_desc=A set of infinispan distributed caches.
 subsys_jacorb_desc=La configuration du sous-syst\u00e8me JacORB
 subsys_jca_adminobject_desc=Les objet d&#39;administration d&#39;un adaptateur de ressources.
 subsys_jca_boostrap_config_desc=Contexte de d\u00e9marrage pour les adaptateurs de ressources. Chaque contexte fait r\u00e9f\u00e9rence \u00e0 un workmanager.
