--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_ja.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_ja.properties
@@ -182,7 +182,7 @@ subsys_ejb3_threadPools=EJB3 \u30B9\u30EC\u30C3\u30C9\u30D7\u30FC\u30EB
 subsys_ejb3_threadpools_desc=EJB \u30B5\u30FC\u30D3\u30B9\u304C\u53C2\u7167\u3059\u308B\u30B9\u30EC\u30C3\u30C9\u30D7\u30FC\u30EB\u8A2D\u5B9A
 subsys_ejb3_timerService=\u30BF\u30A4\u30DE\u30FC\u30B5\u30FC\u30D3\u30B9
 subsys_ejb3_timerServicePath=\u30D1\u30B9
-subsys_ejb3_timerServiceRelativeTo=\u76F8\u5BFE\u30D1\u30B9
+subsys_ejb3_timerServiceRelativeTo=\u76F8\u5BFE\u30D1\u30B9subsys_infinispan_invalidation_cache_desc=A set of infinispan invalidation caches.
 subsys_infinispan_aliases=\u30A8\u30A4\u30EA\u30A2\u30B9
 subsys_infinispan_aquireTimeout=\u53D6\u5F97\u30BF\u30A4\u30E0\u30A2\u30A6\u30C8 (\u30DF\u30EA\u79D2)
 subsys_infinispan_cache_container=\u30AD\u30E3\u30C3\u30B7\u30E5\u30B3\u30F3\u30C6\u30CA\u30FC
