--- a/gui/src/main/java/org/jboss/as/console/client/core/UIMessages_fr.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIMessages_fr.properties
@@ -52,6 +52,9 @@ server_reload_confirm=Souhaitez-vous charger \u00e0 nouveau la configuration de 
 serversRunningOnHost=Disponibilit\u00e9 du serveur sur h\u00f4te \: {0}
 subsys_configadmin_remove=Supprimer Configuration Admin Data
 subsys_configadmin_removeConfirm=Supprimer Configuration Admin Data pour PID \: {0} ?
+subsys_configadmin_addNoPIDselected=TRANSLATE ME: Please select a PID before adding a value
+subsys_configadmin_oneValueRequired=TRANSLATE ME: A Configuration Admin PID must at least have one Configuration Value.
+subsys_configadmin_removeOnLastValueConfirm=TRANSLATE ME: No remaining configuration values. A PID must at least have one configuration value. Remove PID: {0}?
 subsys_jca_err_ds_notEnabled=Source de donn\u00e9es non activ\u00e9e \: {0}
 subsys_jpa_err_mericDisabled=Param\u00e8tre m\u00e9trique non activ\u00e9 sur {0}
 subsys_messaging=Fournisseur de message \: {0}
