--- a/gui/src/main/java/org/jboss/as/console/client/core/UIMessages_ja.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIMessages_ja.properties
@@ -52,6 +52,9 @@ server_reload_confirm=\u30B5\u30FC\u30D0\u30FC{0} \u306E\u30B5\u30FC\u30D0\u30FC
 serversRunningOnHost=\u30DB\u30B9\u30C8\u3067\u306E\u30B5\u30FC\u30D0\u30FC\u5229\u7528\u72B6\u6CC1 \: {0}
 subsys_configadmin_remove=\u8A2D\u5B9A\u7BA1\u7406\u30C7\u30FC\u30BF\u306E\u524A\u9664
 subsys_configadmin_removeConfirm=PID\: {0} \u306E\u8A2D\u5B9A\u7BA1\u7406\u30C7\u30FC\u30BF\u3092\u524A\u9664\u3057\u307E\u3059\u304B\uFF1F
+subsys_configadmin_addNoPIDselected=TRANSLATE ME: Please select a PID before adding a value
+subsys_configadmin_oneValueRequired=TRANSLATE ME: A Configuration Admin PID must at least have one Configuration Value.
+subsys_configadmin_removeOnLastValueConfirm=TRANSLATE ME: No remaining configuration values. A PID must at least have one configuration value. Remove PID: {0}?
 subsys_jca_err_ds_notEnabled=\u30C7\u30FC\u30BF\u30BD\u30FC\u30B9\u306F\u6709\u52B9\u3067\u306F\u3042\u308A\u307E\u305B\u3093\uFF1A {0}
 subsys_jpa_err_mericDisabled={0} \u3067\u30E1\u30C8\u30EA\u30C3\u30AF\u304C\u6709\u52B9\u3067\u306F\u3042\u308A\u307E\u305B\u3093\u3002
 subsys_messaging=\u30E1\u30C3\u30BB\u30FC\u30B8\u30F3\u30B0\u30D7\u30ED\u30D0\u30A4\u30C0\u30FC\: {0}
