--- a/gui/src/main/java/org/jboss/as/console/client/core/UIMessages_pt_BR.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIMessages_pt_BR.properties
@@ -52,6 +52,9 @@ server_reload_confirm=Voc\u00ea deseja recarregar a configura\u00e7\u00e3o do se
 serversRunningOnHost=Disponibilidade do servidor no host\: {0}
 subsys_configadmin_remove=Remover os Dados Admin da Configura\u00e7\u00e3o
 subsys_configadmin_removeConfirm=Remover os Dados Administrativos da Configura\u00e7\u00e3o para PID\: {0}?
+subsys_configadmin_addNoPIDselected=TRANSLATE ME: Please select a PID before adding a value
+subsys_configadmin_oneValueRequired=TRANSLATE ME: A Configuration Admin PID must at least have one Configuration Value.
+subsys_configadmin_removeOnLastValueConfirm=TRANSLATE ME: No remaining configuration values. A PID must at least have one configuration value. Remove PID: {0}?
 subsys_jca_err_ds_notEnabled=A Fonte de Dados n\u00e3o artivada.  {0}
 subsys_jpa_err_mericDisabled=A m\u00e9trica n\u00e3o \u00e9 ativada no {0}
 subsys_messaging=Provedor Message\: {0}
